projects/raaga/demo/k8s-config/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo
  name: demo-svc
  namespace: raaga-dev
spec:
  ports:
    - port: 8093
      protocol: TCP
      targetPort: 8093
  selector:
    app: demo
