projects/raaga/demo/k8s-config/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  namespace: raaga-dev
  labels:
    app: demo
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: public
  tls:
    - hosts:
      -  raaga-demo-dev.coherent.in
      secretName: demo-tls
  rules:
  - host: "raaga-demo-dev.coherent.in"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: demo-svc
            port: 
              number: 8093
